tidied up css; added browser notice

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </symbol>
       </defs>
     </svg>
+    <!--[if lte IE 9]><p class="old-browser-notice">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> to experience this site.</p><![endif]-->
     <div class="off-canvas-wrap" data-offcanvas>
       <div class="inner-wrap">
         <nav class="header"></nav>
