--- a/storage/themes/riddelphotographers/paulakern.com.au/index.html
+++ b/storage/themes/riddelphotographers/paulakern.com.au/index.html
@@ -29,7 +29,7 @@
 			<h1 class="page-title" itemprop="headline">&#xe00c;Exciting news&#xe013;</h1>
 		</header>
 		<main class="content">
-			<h3>We have mixed things up a little and changed the face of our brand! Don’t worry, it's still us but Paula Kern Photography is now called <strong>Riddel Photographers</strong>!</h3>
+			<h3>We have mixed things up a little and changed the face of our brand! Don’t worry, it's still us but <em>Paula Kern Photography</em> is now called <strong>Riddel Photographers</strong>!</h3>
 			<p>We’d love to meet you so come visit us over at <a href="https://www.riddelphotographers.com.au">www.riddelphotographers.com.au</a></p>
 		</main>
 		<footer class="main-footer" itemscope="" itemtype="http://schema.org/WPFooter">
